.Rbuildignore more explicit [ci skip]

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,18 +1,18 @@
-todo-files
+^todo-files$
 .gitignore
-.travis.yml
-appveyor.yml
+^.travis.yml$
+^appveyor.yml$
 ^.*tar.gz$
-src/*.o
-src/*.so
+^src/*.o$
+^src/*.so$
 ^.*\.Rproj$
 ^\.Rproj\.user$
-^man-roxygen
+^man-roxygen$
 ^.editorconfig$
 ^\.ignore$
 ^codecov\.yml$
 ^_pkgdown\.yml$
-^docs
+^docs$
 ^vignettes/mlrMBO_cache/
 ^vignettes/mlrMBO_files/
 ^vignettes/*.html
