--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,9 @@ src/*.so
 plots
 tests/testthat/Rplots.pdf
 *.sublime-*
-vignettes/mlrMBO_cache/
-vignettes/mlrMBO_files/
+vignettes/*_cache/
+vignettes/*_files/
 vignettes/*.html
+vignettes/*.R
 docs/articles/*_cache/
 .Rproj.user
