improve Rbuildignore [ci skip]

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,18 +1,18 @@
 ^todo-files$
-.gitignore
-^.travis.yml$
-^appveyor.yml$
-^.*tar.gz$
-^src/.*.o$
-^src/.*.so$
+^\.gitignore$
+^\.travis\.yml$
+^appveyor\.yml$
+^.*tar\.gz$
+^src/.*\.o$
+^src/.*\.so$
 ^.*\.Rproj$
 ^\.Rproj\.user$
 ^man-roxygen$
-^.editorconfig$
+^\.editorconfig$
 ^\.ignore$
 ^codecov\.yml$
 ^_pkgdown\.yml$
 ^docs$
 ^vignettes/.+_cache$
 ^vignettes/.+_files$
-^vignettes/.+.html$
+^vignettes/.+\.html$
