added BBmisc to appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,6 +19,7 @@ environment:
       CRAN: http://cran.rstudio.com
 
 build_script:
+  - travis-tool.sh install_github berndbischl/BBmisc
   - travis-tool.sh install_deps
 
 test_script:
