--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,9 +13,10 @@ Description: Flexible and comprehensive R toolbox for model-based optimization
     single components can be easily replaced or adapted by the user for specific use
     cases.
 Authors@R: c(
-    person("Bernd", "Bischl", email = "bernd_bischl@gmx.net", role = c("aut")),
+    person("Bernd", "Bischl", email = "bernd_bischl@gmx.net", role = c("aut",
+    "cre")),
     person("Jakob", "Bossek", email = "jakob.bossek@tu-dortmund.de", role = "aut"),
-    person("Jakob", "Richter", email = "code@jakob-r.de", role = c("aut", "cre")),
+    person("Jakob", "Richter", email = "code@jakob-r.de", role = c("aut")),
     person("Daniel", "Horn", email = "daniel.horn@tu-dortmund.de", role = "aut"),
     person("Michel", "Lang", email = "michellang@gmail.com", role = "aut"),
     person("Janek", "Thomas", email = "janek.thomas@stat.uni-muenchen.de", role = "aut"))
@@ -24,8 +25,8 @@ URL: https://github.com/mlr-org/mlrMBO
 BugReports: https://github.com/mlr-org/mlrMBO/issues
 Depends:
     mlr (>= 2.10),
-    ParamHelpers (>= 1.8),
-    smoof (>= 1.3)
+    ParamHelpers (>= 1.10),
+    smoof (>= 1.4)
 Imports:
     backports,
     BBmisc (>= 1.11),
@@ -58,6 +59,6 @@ Suggests:
     covr
 LazyData: yes
 ByteCompile: yes
-Version: 1.0.0
+Version: 1.0.1
 RoxygenNote: 6.0.1
 VignetteBuilder: knitr
