appveyor oldrel does not make so much sense now

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ environment:
   matrix:
     - R_VERSION: devel
     - R_VERSION: release
-    - R_VERSION: oldrel
+    # - R_VERSION: oldrel
       RTOOLS_VERSION: 32
       CRAN: http://cran.rstudio.com
 
