appveyor.yml skip RTOOLS 3.2

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,7 +15,7 @@ environment:
     - R_VERSION: devel
     - R_VERSION: release
     # - R_VERSION: oldrel
-      RTOOLS_VERSION: 32
+    #  RTOOLS_VERSION: 32
       CRAN: http://cran.rstudio.com
 
 build_script:
