--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,12 +14,9 @@ environment:
   matrix:
     - R_VERSION: devel
     - R_VERSION: release
-    # - R_VERSION: oldrel
-    #  RTOOLS_VERSION: 32
-      CRAN: http://cran.rstudio.com
+    - R_VERSION: oldrel
 
 build_script:
-  - travis-tool.sh install_github berndbischl/BBmisc
   - travis-tool.sh install_deps
 
 test_script:
