--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(crit.mr)
 export(crit.se)
 export(exampleRun)
 export(exampleRunMultiObj)
+export(finalizeSMBO)
 export(getGlobalOpt)
 export(getMBOInfillCritComponents)
 export(getMBOInfillCritId)
@@ -33,6 +34,7 @@ export(getSupportedInfillOptFunctions)
 export(getSupportedMultipointInfillOptFunctions)
 export(hasRequiresInfillCritStandardError)
 export(initCrit)
+export(initSMBO)
 export(makeMBOControl)
 export(makeMBOInfillCrit)
 export(makeMBOInfillCritAEI)
@@ -55,6 +57,7 @@ export(setMBOControlMultiPoint)
 export(setMBOControlTermination)
 export(trafoLog)
 export(trafoSqrt)
+export(updateSMBO)
 import(BBmisc)
 import(ParamHelpers)
 import(checkmate)
