--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(initCrit,InfillCritCB)
 S3method(initCrit,default)
 S3method(plot,MBOMultiObjResult)
 S3method(plot,MBOSingleObjResult)
+S3method(plot,OptState)
 S3method(print,MBOControl)
 S3method(print,MBOExampleRun)
 S3method(print,MBOExampleRunMultiObj)
