--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,7 @@ export(mbo)
 export(mboContinue)
 export(mboFinalize)
 export(plotExampleRun)
+export(proposePoints)
 export(renderExampleRunPlot)
 export(setMBOControlInfill)
 export(setMBOControlMultiObj)
@@ -62,6 +63,7 @@ export(updateSMBO)
 import(BBmisc)
 import(ParamHelpers)
 import(checkmate)
+import(data.table)
 import(grDevices)
 import(mlr)
 import(parallelMap)
