--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -17,7 +17,7 @@ navbar:
       - text: Noisy Optimization
         href: articles/supplementary/noisy_optimization.html
       - text: Infill Criteria
-        href: articles/supplementary/infill_criteria
+        href: articles/supplementary/infill_criteria.html
       - text: Machine learning with mlrMBO
         href: articles/supplementary/machine_learning_with_mlrmbo.html
   - text: Reference
