--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(mboContinue)
 export(mboFinalize)
 export(plotExampleRun)
 export(renderExampleRunPlot)
+export(setMBOControlConceptDrift)
 export(setMBOControlInfill)
 export(setMBOControlMultiObj)
 export(setMBOControlMultiPoint)
@@ -58,12 +59,14 @@ export(trafoSqrt)
 import(BBmisc)
 import(ParamHelpers)
 import(checkmate)
+import(data.table)
 import(grDevices)
 import(mlr)
 import(parallelMap)
 import(smoof)
 import(stats)
 import(utils)
+importFrom(R6,R6Class)
 importFrom(lhs,randomLHS)
 useDynLib(mlrMBO,c_eps_indicator)
 useDynLib(mlrMBO,c_sms_indicator)
