--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,8 @@ Imports:
     checkmate (>= 1.8.2),
     data.table,
     lhs,
-    parallelMap (>= 1.3)
+    parallelMap (>= 1.3),
+    R6
 Suggests:
     akima,
     cmaesr (>= 1.0.3),
