kind of working

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -61,6 +61,7 @@ export(mboContinue)
 export(mboFinalize)
 export(plotExampleRun)
 export(renderExampleRunPlot)
+export(setMBOControlConceptDrift)
 export(setMBOControlInfill)
 export(setMBOControlMultiObj)
 export(setMBOControlMultiPoint)
