Human-in-the-loop MBO (#397)
* tryout

* smbo works

* cleanup [ci skip]

* plot, und multiobjective

* fixes

* typo

* roxygen [ci skip]

* add vignette and other stuff

* updateMBO assertions

* cleanup

* vignette: add loop, smbo y arg check

* use makeProposal in stepMBO

* more argchecks

* whoopsie

* fixes checks

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -20,6 +20,8 @@ navbar:
         href: articles/supplementary/infill_criteria.html
       - text: Machine learning with mlrMBO
         href: articles/supplementary/machine_learning_with_mlrmbo.html
+      - text: Human-in-the-loop MBO
+        href: articles/supplementary/human_in_the_loop_MBO.html
   - text: Reference
     icon: fa-book
     href: reference/index.html
