--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(initCrit,InfillCritCB)
 S3method(initCrit,default)
 S3method(plot,MBOMultiObjResult)
 S3method(plot,MBOSingleObjResult)
+S3method(plot,OptState)
 S3method(print,MBOControl)
 S3method(print,MBOExampleRun)
 S3method(print,MBOExampleRunMultiObj)
@@ -23,6 +24,7 @@ export(crit.mr)
 export(crit.se)
 export(exampleRun)
 export(exampleRunMultiObj)
+export(finalizeSMBO)
 export(getGlobalOpt)
 export(getMBOInfillCritComponents)
 export(getMBOInfillCritId)
@@ -33,6 +35,7 @@ export(getSupportedInfillOptFunctions)
 export(getSupportedMultipointInfillOptFunctions)
 export(hasRequiresInfillCritStandardError)
 export(initCrit)
+export(initSMBO)
 export(makeMBOControl)
 export(makeMBOInfillCrit)
 export(makeMBOInfillCritAEI)
@@ -48,6 +51,7 @@ export(mbo)
 export(mboContinue)
 export(mboFinalize)
 export(plotExampleRun)
+export(proposePoints)
 export(renderExampleRunPlot)
 export(setMBOControlInfill)
 export(setMBOControlMultiObj)
@@ -55,9 +59,11 @@ export(setMBOControlMultiPoint)
 export(setMBOControlTermination)
 export(trafoLog)
 export(trafoSqrt)
+export(updateSMBO)
 import(BBmisc)
 import(ParamHelpers)
 import(checkmate)
+import(data.table)
 import(grDevices)
 import(mlr)
 import(parallelMap)
