--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ export(setMBOControlTermination)
 export(trafoLog)
 export(trafoSqrt)
 export(updateSMBO)
+export(wrapSmoofConceptDrift)
 import(BBmisc)
 import(ParamHelpers)
 import(checkmate)
