expected improvement per second

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(getMBOInfillCritParams)
 export(getSupportedInfillOptFunctions)
 export(getSupportedMultipointInfillOptFunctions)
 export(hasRequiresInfillCritStandardError)
+export(hasRequiresInfillCritTime)
 export(initCrit)
 export(initSMBO)
 export(makeMBOControl)
@@ -42,6 +43,7 @@ export(makeMBOInfillCritAEI)
 export(makeMBOInfillCritCB)
 export(makeMBOInfillCritDIB)
 export(makeMBOInfillCritEI)
+export(makeMBOInfillCritEIs)
 export(makeMBOInfillCritEQI)
 export(makeMBOInfillCritMeanResponse)
 export(makeMBOInfillCritStandardError)
