--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: Flexible and comprehensive R toolbox for model-based optimization
     cases.
 Authors@R: c(
     person("Bernd", "Bischl", email = "bernd_bischl@gmx.net", role = c("aut")),
-    person("Jakob", "Bossek", email = "jakob.bossek@tu-dortmund.de", role = "aut"),
+    person("Jakob", "Bossek", email = "j.bossek@gmail.com", role = "aut"),
     person("Jakob", "Richter", email = "code@jakob-r.de", role = c("aut", "cre")),
     person("Daniel", "Horn", email = "daniel.horn@tu-dortmund.de", role = "aut"),
     person("Michel", "Lang", email = "michellang@gmail.com", role = "aut"),
