prepare pkgdown autobuild

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,19 @@ r:
 
 r_github_packages:
   - jimhester/covr
+  - hadley/pkgdown
 
 env:
+  matrix:
+  - _R_CHECK_LENGTH_1_CONDITION_=true
   global:
     - secure: "e2QLomaUqNvpHnGNdBXS4VO2/UWokrKl9UgYrqWo+fhpXaJiJuONNPNL44BuWZR2Cy7noTHrevVbTKBkGpqJR42mkjzcjd6qyR1Ctiveir+84/HTtmexouIUn5OFRH5dgyt/gquld31RlHlSYoKho3nZ7D7SnVExov9tp2FGRhU="
 
-# commented out because this call always needed 10+ minutes and time outed for travis
+before_script:
+  - R --no-save <<< 'library("devtools"); document()'
+
+after_success:
+  - if [[ "$TRAVIS_PULL_REQUEST" == "false" && "$TRAVIS_BRANCH" == "master" && "${TRAVIS_R_VERSION_STRING}" == "release" ]]; then bash .github/deploy.sh; fi;
+  - if [[ "${TRAVIS_R_VERSION_STRING}" == "release" ]]; then Rscript -e 'covr::coveralls()'; fi;
 after_success:
   - Rscript -e 'covr::codecov()'
