--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,22 @@
 language: r
 sudo: false
 cache: packages
-
 r:
-  - release
-  - devel
-
+- release
+- devel
+r_packages:
+- devtools
 r_github_packages:
-  - jimhester/covr
-  - hadley/pkgdown
-
+- jimhester/covr
+- hadley/pkgdown
 env:
   matrix:
   - _R_CHECK_LENGTH_1_CONDITION_=true
   global:
-    - secure: "e2QLomaUqNvpHnGNdBXS4VO2/UWokrKl9UgYrqWo+fhpXaJiJuONNPNL44BuWZR2Cy7noTHrevVbTKBkGpqJR42mkjzcjd6qyR1Ctiveir+84/HTtmexouIUn5OFRH5dgyt/gquld31RlHlSYoKho3nZ7D7SnVExov9tp2FGRhU="
-
+    secure: efki/PoCvROHC5GMOWqL3hiYeU/no71mnw927ZLF/D0eo3L0aBjT6533KWy3S8w+kg4ilgZzoS5/Nu6PuVFmfPmOiXKj95ZZVkuHDjnAiBFPsowneruOAYNMpwGlM1A3Z3T6jTjtX+FtvlgukhVNrkNoXFy5SmZ5pclic0Z7zfM=
 before_script:
-  - R --no-save <<< 'library("devtools"); document()'
-
+- R --no-save <<< 'library("devtools"); document()'
 after_success:
-  - if [[ "$TRAVIS_PULL_REQUEST" == "false" && "$TRAVIS_BRANCH" == "master" && "${TRAVIS_R_VERSION_STRING}" == "release" ]]; then bash .github/deploy.sh; fi;
-  - if [[ "${TRAVIS_R_VERSION_STRING}" == "release" ]]; then Rscript -e 'covr::coveralls()'; fi;
-after_success:
-  - Rscript -e 'covr::codecov()'
+- if [[ "$TRAVIS_PULL_REQUEST" == "false" && "$TRAVIS_BRANCH" == "master" && "${TRAVIS_R_VERSION_STRING}"
+  == "release" ]]; then bash .github/deploy.sh; fi;
+- if [[ "${TRAVIS_R_VERSION_STRING}" == "release" ]]; then Rscript -e 'covr::coveralls()'; fi;
