travis deployment e1071 package

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ r:
 - devel
 r_packages:
 - devtools
-- animation
+- animation #vignettes: animation.Rmd
+- e1071 #vignette: machine_learning_with_mlrmbo.Rmd
 r_github_packages:
 - jimhester/covr
 - hadley/pkgdown
