--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(crit.cb1)
 export(crit.cb2)
 export(crit.dib1)
 export(crit.ei)
+export(crit.eis)
 export(crit.eqi)
 export(crit.mr)
 export(crit.se)
