--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,6 +35,7 @@ Imports:
     lhs,
     parallelMap (>= 1.3)
 Suggests:
+    akima,
     cmaesr (>= 1.0.3),
     ggplot2,
     RColorBrewer,
@@ -47,10 +48,12 @@ Suggests:
     kernlab,
     kknn,
     knitr,
+    mco,
     nnet,
     party,
     randomForest,
     rmarkdown,
+    rgenoud,
     rpart,
     testthat,
     covr
