--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ r:
 - devel
 r_packages:
 - devtools
+- pkgload
 - animation #vignettes: animation.Rmd
 - e1071 #vignette: machine_learning_with_mlrmbo.Rmd
 - pkgdown
@@ -21,7 +22,7 @@ env:
   global:
     secure: efki/PoCvROHC5GMOWqL3hiYeU/no71mnw927ZLF/D0eo3L0aBjT6533KWy3S8w+kg4ilgZzoS5/Nu6PuVFmfPmOiXKj95ZZVkuHDjnAiBFPsowneruOAYNMpwGlM1A3Z3T6jTjtX+FtvlgukhVNrkNoXFy5SmZ5pclic0Z7zfM=
 #before_script:
-#- R --no-save <<< 'devtools::document()'
+- R --no-save <<< 'pkgload::load_all(); devtools::document()'
 after_success:
 - 'if [[ "$TRAVIS_PULL_REQUEST" == "false" && "$TRAVIS_BRANCH" == "master" && "$TRAVIS_R_VERSION_STRING" == "release" && "$TRAVIS_EVENT_TYPE" != "cron" ]] ; then
     R --no-save <<< "devtools::install(); pkgdown::build_site()";
