add scaled expected improvement

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(crit.eqi)
 export(crit.mr)
 export(crit.poi)
 export(crit.se)
+export(crit.sei)
 export(exampleRun)
 export(exampleRunMultiObj)
 export(finalizeSMBO)
@@ -48,6 +49,7 @@ export(makeMBOInfillCritEI)
 export(makeMBOInfillCritEQI)
 export(makeMBOInfillCritMeanResponse)
 export(makeMBOInfillCritPOI)
+export(makeMBOInfillCritSEI)
 export(makeMBOInfillCritStandardError)
 export(makeMBOLearner)
 export(makeMBOTrafoFunction)
