--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -1,8 +1,21 @@
-url: https://mlr-org.github.io/mlrMBO
+url: https://mlrMBO.mlr-org.com
 
 template:
+  package: mlr3pkgdowntemplate
   params:
-    bootswatch: cosmo
+    bootswatch: journal
+  default_assets: false
+
+development:
+  destination: dev
+  version_label: default
+  version_tooltip: "Development version"
+
+home:
+  strip_header: true
+
+toc:
+  depth: 3
 
 navbar:
   left:
