relax check stuff and allow manual nugget

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ S3method(initCrit,default)
 S3method(plot,MBOMultiObjResult)
 S3method(plot,MBOSingleObjResult)
 S3method(plot,OptState)
+S3method(plot_prediction,LearnerClassif)
 S3method(print,MBOControl)
 S3method(print,MBOExampleRun)
 S3method(print,MBOExampleRunMultiObj)
@@ -65,6 +66,7 @@ export(mbo)
 export(mboContinue)
 export(mboFinalize)
 export(plotExampleRun)
+export(plot_prediction)
 export(proposePoints)
 export(renderExampleRunPlot)
 export(setMBOControlConceptDrift)
