--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,7 +87,7 @@ jobs:
       - name: "[Custom block] [macOS] macOS system libs setup"
         if: runner.os == 'macOS'
         run: |
-          brew cask install xquartz
+          brew install --cask xquartz
 
       - name: "[Stage] [Linux] Install curl and libgit2"
         if: runner.os == 'Linux'
