--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,11 +30,11 @@ jobs:
         config:
           ### Custom configs (specify your own runners here)
           # [Custom matrix env var]
-          # - { os: windows-latest, r: "release" }
+          - { os: windows-latest, r: "release" }
           # [Custom matrix env var]
-          # - { os: macOS-latest, r: "release", pkgdown: "true", latex: "true" }
+          - { os: macOS-latest, r: "release", pkgdown: "true", latex: "true" }
           # [Custom matrix env var]
-          # - { os: ubuntu-latest, r: "release" }
+          - { os: ubuntu-latest, r: "release" }
           # [Custom matrix env var]
           # - { os: ubuntu-latest, r: "devel" }
 
