--- a/.github/workflows/tic.yml
+++ b/.github/workflows/tic.yml
@@ -32,6 +32,8 @@ jobs:
           - { os: ubuntu-latest, r: "release", pkgdown: "true" }
 
     env:
+      # [Custom env var] fake virtual display for rgl package
+      DISPLAY: ":99"
       # make sure to run `tic::use_ghactions_deploy()` to set up deployment
       TIC_DEPLOY_KEY: ${{ secrets.TIC_DEPLOY_KEY }}
       # prevent rgl issues because no X11 display is available
